added handling of route presets.

--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 *** Orm Finnendahl <orm.finnendahl@selma.hfmdk-frankfurt.de>
 
     Lisp Steuerung für die Papierorgel des gleichnamigen Seminars von
-    Nicolas Buzzi und Orm Finnendahl im WS 22-23.
+    Nicolas Buzzi und Orm Finnendahl im WS 22-23, SS 23, etc..
     
 ** License
 
